fix(panels): Update animated panels to be position:fixed in mobile tabs (#3324)

--- a/packages/design-system/ui/components/panels/base/_index.scss
+++ b/packages/design-system/ui/components/panels/base/_index.scss
@@ -172,6 +172,13 @@
   z-index: $z-index-modal;
 }
 
+.slds-tabs-mobile__container {
+
+  .slds-panel_animated {
+    position: fixed;
+  }
+}
+
 .slds-panel_animated.slds-is-open {
   transform: translate3d(0, 0, 0);
 }
