--- a/packages/design-system/ui/components/feeds/post/_index.scss
+++ b/packages/design-system/ui/components/feeds/post/_index.scss
@@ -15,7 +15,7 @@
   border-bottom: $border-width-thin solid $color-border;
 
   .slds-comment {
-    padding: $spacing-x-small $spacing-medium;
+    padding: $var-spacing-vertical-x-small $spacing-medium;
   }
 }
 
@@ -44,7 +44,7 @@
    * @restrict .slds-post header
    */
   &__header {
-    margin-bottom: $spacing-small;
+    margin-bottom: $var-spacing-vertical-small;
   }
 
   /**
