--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -137,6 +137,12 @@
   // Global Navigation
   'global-navigation/navigation-bar/index',
 
+  // Expression
+  'expression/base/index',
+  'expression/custom-logic/index',
+  'expression/formula/index',
+  'expression/filters/index',
+
   // Buider Header
   'builder-header/base/index',
 
