--- a/packages/design-system/ui/utilities/visibility/_index.scss
+++ b/packages/design-system/ui/utilities/visibility/_index.scss
@@ -202,3 +202,13 @@
     }
   }
 }
+
+/**
+ * @summary Hides element and removes width
+ * @selector .slds-is-visually-empty
+ * @modifier
+ */
+.slds-is-visually-empty {
+  visibility: hidden !important;
+  width: 0;
+}
