fix(page-header): scope variable font to record home (#3341)

--- a/packages/design-system/ui/components/page-headers/base/_index.scss
+++ b/packages/design-system/ui/components/page-headers/base/_index.scss
@@ -182,7 +182,7 @@
  */
 
 .slds-page-header__title {
-  font-size: $var-font-size-8;
+  font-size: $font-size-6;
   font-weight: $page-header-title-font-weight;
   line-height: $line-height-heading;
 
