--- a/packages/design-system/ui/components/page-headers/record-home/_index.scss
+++ b/packages/design-system/ui/components/page-headers/record-home/_index.scss
@@ -34,7 +34,6 @@
  * @selector .slds-page-header_record-home
  * @restrict .slds-page-header
  * @support dev-ready
- * @required
  */
 .slds-page-header_record-home {
 
@@ -44,8 +43,7 @@
 }
 
 /**
- * Creates margins around the detail section of record home
- *
+ * @summary Creates margins around the detail section of record home
  * @selector .slds-page-header__detail-row
  * @restrict .slds-page-header ul
  * @notes Only the record home page header contains this detail area
@@ -61,18 +59,15 @@
 }
 
 /**
-* Creates margins around the detail section of record home
-*
+* @summary Creates margins around the detail section of record home
 * @selector .slds-page-header__detail-block
 * @restrict .slds-page-header__detail-row li
 * @notes Only the record home page header contains this detail area
 */
 
 .slds-page-header__detail-block {
-  padding: {
-    right: $var-spacing-horizontal-x-large;
-    left: $var-spacing-horizontal-x-large;
-  }
+  padding-right: $var-spacing-horizontal-x-large;
+  padding-left: $var-spacing-horizontal-x-large;
   max-width: 25%;
 
   &:first-child {
