fix(expandable-section): return to static type (#3344)

--- a/packages/design-system/ui/components/expandable-section/base/_index.scss
+++ b/packages/design-system/ui/components/expandable-section/base/_index.scss
@@ -26,7 +26,7 @@
   &__title {
     display: flex;
     align-items: center;
-    font-size: $var-font-size-5;
+    font-size: $font-size-5;
     line-height: $line-height-button; // Same height as title-action
     border: $border-width-thin solid transparent;
     border-radius: $border-radius-medium;
