--- a/packages/design-system/ui/components/files/base/_index.scss
+++ b/packages/design-system/ui/components/files/base/_index.scss
@@ -30,7 +30,7 @@
    * Set crop boundaries to a file component, set to 16:9 by default
    *
    * @selector .slds-file__crop
-   * @restrict .slds-file div, .slds-file a
+   * @restrict .slds-file figure
    */
   &__crop {
     display: block;
@@ -89,6 +89,37 @@
     &--4-by-3 {
       padding-top: 75%;
     }
+
+    // When a spinner is used with .slds-file__title_card, this attempts to visually center the spinner
+    :not(:only-child) .slds-spinner {
+      top: 45%; // magic number
+    }
+  }
+
+  /**
+   * @summary Figure element that contains the image of a File
+   * @selector .slds-file__figure
+   * @restrict .slds-file figure
+   */
+  &__figure {
+    display: block;
+    min-width: $size-x-small;
+    max-width: $size-small;
+    min-height: $size-xx-small;
+    max-height: $size-small;
+  }
+
+  /**
+   * @summary Modifying class if the image in a figure is in portrait orientation
+   * @selector .slds-file__figure_portrait
+   * @restrict .slds-file__figure
+   */
+  // This is used to properly constrain portrait images. Without this, portrait images larger than 240px tall will overflow its container.
+  .slds-file__figure_portrait img {
+    display: block;
+    margin: 0 auto;
+    max-height: $size-small;
+    height: auto;
   }
 
   /**
