fix(rich-text-editor): remove red border from child input elements (#3351)

--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -120,6 +120,7 @@
   border: $border-width-thick solid $color-border-error;
 
   .slds-input {
+    border-color: $color-border-input;
     box-shadow: none;
   }
 
