feat(data-tables): Create examples of data table and list builder with hidden headers (#3340)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -228,6 +228,7 @@
   'data-tables/responsive/index',
   'data-tables/inline-edit/index',
   'data-tables/fixed-header/index',
+  'data-tables/hidden-header/index',
 
   // Tree (Order matters)
   'trees/base/index',
