feat(drop-zone): create new drop zone component (#3343)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -128,6 +128,9 @@
   'docked-utility-bar/base/index',
   'docked-utility-bar/utility-panel/index',
 
+  // Drop Zone
+  'drop-zone/base/index',
+
   // Global Header
   'global-header/base/index',
   'global-header/global-actions/index',
