fix(icon): prevent oval shape when using x-small size modifiers (#3381)

--- a/packages/design-system/ui/components/icons/base/_index.scss
+++ b/packages/design-system/ui/components/icons/base/_index.scss
@@ -25,6 +25,7 @@
   &--circle {
     padding: $spacing-x-small;
     border-radius: $border-radius-circle;
+    line-height: $line-height-reset;
   }
 }
 
